--- a/design/index.html
+++ b/design/index.html
@@ -4,76 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OpenWeatherMap FP App</title>
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 
-<body>
-  <div>
-    <div>
-      <h1>Weather</h1>
-      <div>
-        <form>
-          <label>Location</label>
-          <input>
-          <buttontype="submit">Add</button>
+<body class="sans-serif pa4 f3">
+  <div id="app">
+    <div class="mw6 center">
+      <h1 class="f2 pv2 bb">Weather</h1>
+      <div class="">
+        <form class="">
+          <label class="f6 b db mb2">Location</label>
+          <input class="pa2 w-60">
+          <button class="pv2 ph3 br1" type="submit">Add</button>
         </form>
       </div>
-      <ul>
-        <li>
-          <div>
-            <div>Location</div>
+      <ul class="list pl0 ml0 ba b--light-silver br">
+        <li class="pa3 bb b--light-silver flex justify-between relative">
+          <div class="w-60 tl">
+            <div class="f7 b">Location</div>
             <div>Honolulu</div>
           </div>
-          <div>
-            <div>Temp</div>
+          <div class="w-10 tc">
+            <div class="f7 b">Temp</div>
             <div>?</div>
           </div>
-          <div>
-            <div>Low</div>
+          <div class="w-10 tc">
+            <div class="f7 b">Low</div>
             <div>?</div>
           </div>
-          <div>
-            <div></div>High</div>
+          <div class="w-10 tc mr2">
+            <div class="f7 b">High</div>
             <div>?</div>
           </div>
-          <i></i>
+          <i class="relative top--1 right--1 mt1 mr1 fa fa-remove pointer black-40"></i>
         </li>
-        <li>
-          <div>
-            <div>Location</div>
+        <li class="pa3 bb b--light-silver flex justify-between relative">
+          <div class="w-60 tl">
+            <div class="f7 b">Location</div>
             <div>London</div>
           </div>
-          <div>
-            <div>Temp</div>
+          <div class="w-10 tc">
+            <div class="f7 b">Temp</div>
             <div>?</div>
           </div>
-          <div>
-            <div>Low</div>
+          <div class="w-10 tc">
+            <div class="f7 b">Low</div>
             <div>?</div>
           </div>
-          <div>
-            <div>High</div>
+          <div class="w-10 tc mr2">
+            <div class="f7 b">High</div>
             <div>?</div>
           </div>
-          <i></i>
+          <i class="relative top--1 right--1 mt1 mr1 fa fa-remove pointer black-40"></i>
         </li>
-        <li>
-          <div>
-            <div>Location</div>
+        <li class="pa3 bb b--light-silver flex justify-between relative">
+          <div class="w-60 tl">
+            <div class="f7 b">Location</div>
             <div>Paris</div>
           </div>
-          <div>
-            <div>Temp</div>
+          <div class="w-10 tc">
+            <div class="f7 b">Temp</div>
             <div>?</div>
           </div>
-          <div>
-            <div>Low</div>
+          <div class="w-10 tc">
+            <div class="f7 b">Low</div>
             <div>?</div>
           </div>
-          <div>
-            <div>High</div>
+          <div class="w-10 tc mr2">
+            <div class="f7 b">High</div>
             <div>?</div>
           </div>
-          <i></i>
+          <i class="relative top--1 right--1 mt1 mr1 fa fa-remove pointer black-40"></i>
         </li>
       </ul>
     </div>
