--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body class="sans-serif pa4 f3">
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
